# CLAIRS-Autonomous-Defense

./: Dockerfile  README.md  app.py  clairs_neural_core.pkl  index.html  inference.py  live_defense.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  models.py
