[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clairs-network-defense"
version = "2.0.0"
description = "CLAIRS: Autonomous Defense Environment for IoT DDoS Mitigation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
